# keplerix-back

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
app/alembic/: env.py
app/alembic/versions/: 5076bc4ae714_create_user_table.py  8c4e79cb3ab0_create_users_table.py  bb56098b4d7b_create_user_table.py
app/api/: main.py
app/api/v1/endpoints/: projects.py  users.py
app/core/: auth.py  config.py  email.py  manager.py  redis.py
app/db/: session.py
app/db/models/: project.py  user.py
app/domain/projects/: entities.py
app/domain/users/: entities.py
file-service/: Dockerfile  alembic.ini  main.py
gateway/: Dockerfile  main.py
migrations/: env.py
migrations/versions/: d6b283344baa_create_tables.py
tests/test_core/: test_auth.py  test_security.py
tests/test_db/: test_session.py
tests/test_domain/test_users/: test_entities.py
user-service/: Dockerfile  main.py
user-service/api/: dependencies.py
user-service/api/v1/endpoints/: auth.py  projects.py  users.py
user-service/core/: config.py  security.py
user-service/db/: base.py  session.py
user-service/db/models/: user.py
